--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>   
     </main>
     <section class="container mt-5">
-          <div class="row">
+          <div class="row d-flex align-items-center">
             <div class="col-md-5 g-5">
               <div class="d-flex align-items-center">
                   <img width="78" height="82" src="/icons/image 12.png" alt="">
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div class="d-flex align-items-center">
-              <img width="78" height="82" src="/icons/image 12.png" alt="">
+              <img width="78" height="82" src="/icons/image 14.png" alt="">
               <div class="mx-4">
                   <h3>Find the Perfect Fit</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, dolorum ipsam odit omnis labore dolor reiciendis saepe iusto mollitia tenetur?</p>
@@ -201,8 +201,8 @@
           </div>
           </div>
           
-          <div class="col-md-6">
-              <img width="600" height="355" src="/images/shopping.png" alt="">
+          <div class="col-md-6 col-12">
+              <img class="img-fluid" width="600" height="355" src="/images/shopping.png" alt="">
           </div>
           
         </div>
