--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
               </div>
               <div class="col-lg-6">
-                  <img src="/images/model.png" alt="">
+                  <img src="./images/model.png" alt="">
               </div>
              
           </div>
