--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="col">
             <div class="shadow p-3 rounded">
               <div style="background-color: #F1F1F1;">
-                <img width="293" src="/images/jacket-1.png" class="card-img-top p-5" alt="...">
+                <img width="293" src="./images/jacket-1.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
                 <h4 class="card-title">Yellow Coat Jacket</h4>
@@ -78,7 +78,7 @@
           <div class="col">
             <div class="shadow p-3 rounded">
               <div style="background-color: #F1F1F1;">
-                <img width="293" src="/images/jacket-2.png" class="card-img-top p-5" alt="...">
+                <img width="293" src="./images/jacket-2.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
                 <h4 class="card-title">Yellow Coat Jacket</h4>
@@ -97,7 +97,7 @@
           <div class="col">
             <div class="shadow p-3 rounded">
               <div style="background-color: #F1F1F1;">
-                <img width="293" src="/images/jacket-3.png" class="card-img-top p-5" alt="...">
+                <img width="293" src="./images/jacket-3.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
                 <h4 class="card-title">Yellow Coat Jacket</h4>
@@ -119,7 +119,7 @@
           <div class="col">
             <div class="shadow p-3 rounded">
               <div style="background-color: #F1F1F1;">
-                <img width="293" src="/images/jacket-4.png" class="card-img-top p-5" alt="...">
+                <img width="293" src="./images/jacket-4.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
                 <h4 class="card-title">Yellow Coat Jacket</h4>
@@ -138,7 +138,7 @@
           <div class="col">
             <div class="shadow p-3 rounded">
               <div style="background-color: #F1F1F1;">
-                <img width="293" src="/images/jacket-5.png" class="card-img-top p-5" alt="...">
+                <img width="293" src="./images/jacket-5.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
                 <h4 class="card-title">Yellow Coat Jacket</h4>
@@ -157,7 +157,7 @@
           <div class="col">
             <div class="shadow p-3 rounded">
               <div style="background-color: #F1F1F1;">
-                <img width="293" src="/images/jacket-6.png" class="card-img-top p-5" alt="...">
+                <img width="293" src="./images/jacket-6.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
                 <h4 class="card-title">Yellow Coat Jacket</h4>
@@ -186,14 +186,14 @@
                   </div>
               </div>
               <div class="d-flex align-items-center">
-                <img width="78" height="82" src="/icons/image 13.png" alt="">
+                <img width="78" height="82" src="./icons/image 13.png" alt="">
                 <div class="mx-4">
                     <h3>Free Exchanges</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, dolorum ipsam odit omnis labore dolor reiciendis saepe iusto mollitia tenetur?</p>
                 </div>
             </div>
             <div class="d-flex align-items-center">
-              <img width="78" height="82" src="/icons/image 14.png" alt="">
+              <img width="78" height="82" src="./icons/image 14.png" alt="">
               <div class="mx-4">
                   <h3>Find the Perfect Fit</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, dolorum ipsam odit omnis labore dolor reiciendis saepe iusto mollitia tenetur?</p>
@@ -202,7 +202,7 @@
           </div>
           
           <div class="col-md-6 col-12">
-              <img class="img-fluid" width="600" height="355" src="/images/shopping.png" alt="">
+              <img class="img-fluid" width="600" height="355" src="./images/shopping.png" alt="">
           </div>
           
         </div>
