code update completed

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <div class="row d-flex align-items-center">
             <div class="col-md-5 g-5">
               <div class="d-flex align-items-center">
-                  <img width="78" height="82" src="/icons/image 12.png" alt="">
+                  <img width="78" height="82" src="./icons/image 12.png" alt="">
                   <div class="mx-4">
                       <h3>Find the Perfect Fit</h3>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, dolorum ipsam odit omnis labore dolor reiciendis saepe iusto mollitia tenetur?</p>
