--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguin-Fashion</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="container mb-5">
-        <header>
+    <section style="background-color: #FFFBF0; padding-bottom: 2%;">
+        <header class="container mb-5">
           <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img width="292" height="40" src="./images/logo.png" alt=""></a>
@@ -38,8 +41,8 @@
           </nav>
           <div class="row d-flex align-items-center">
               <div class="col-lg-6">
-                  <h1>Be the Penguins</h1>
-                  <h1>of Winter</h1>
+                  <h1 style="color: #FABE4C; font-size: 80px;">Be the Penguins</h1>
+                  <h1 style="color: #363958; font-size: 80px;">of Winter</h1>
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium alias laudantium nostrum eveniet architecto tempore voluptatibus accusamus modi unde impedit?</p>
                   <br>
                   <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
@@ -54,7 +57,7 @@
                               <!-- Brand Section -->
     <main class="container">
       
-        <h3 style="color: #363958">WOMAN JACKET</h3>
+        <h3 style="color: #363958; font-size: 48px;">WOMAN JACKET</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="shadow p-3 rounded">
@@ -114,7 +117,7 @@
             </div>
           </div>
         </div>
-        <h3 class="mt-5" style="color: #363958">MEN JACKET</h3>
+        <h3 class="mt-5" style="color: #363958; font-size: 48px;">MEN JACKET</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="shadow p-3 rounded">
