--- a/index.html
+++ b/index.html
@@ -181,24 +181,24 @@
     <section class="container mt-5">
           <div class="row d-flex align-items-center">
             <div class="col-md-5 g-5">
-              <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center shadow p-2 m-3 rounded">
                   <img width="78" height="82" src="./icons/image 12.png" alt="">
                   <div class="mx-4">
                       <h4>Find the Perfect Fit</h4>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, dolorum ipsam odit omnis labore dolor reiciendis saepe iusto mollitia tenetur?</p>
                   </div>
               </div>
-              <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center shadow p-2 m-3 rounded">
                 <img width="78" height="82" src="./icons/image 13.png" alt="">
                 <div class="mx-4">
                     <h4>Free Exchanges</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, dolorum ipsam odit omnis labore dolor reiciendis saepe iusto mollitia tenetur?</p>
                 </div>
             </div>
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center shadow p-2 m-3 rounded">
               <img width="78" height="82" src="./icons/image 14.png" alt="">
               <div class="mx-4">
-                  <h4>Find the Perfect Fit</h4>
+                  <h4>Contact Our Seller</h4>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, dolorum ipsam odit omnis labore dolor reiciendis saepe iusto mollitia tenetur?</p>
               </div>
           </div>
