--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           </div>
           </div>
           
-          <div class="col-md-6 col-12">
+          <div class="col-md-6 col-12 p-5">
               <img class="img-fluid" width="600" height="355" src="./images/shopping.png" alt="">
           </div>
           
