--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <img width="293" src="./images/jacket-2.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
-                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <h4 class="card-title">Ladies Jacket</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="row d-flex align-items-center">
@@ -103,7 +103,7 @@
                 <img width="293" src="./images/jacket-3.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
-                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <h4 class="card-title">Woman Leather Jacket</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="row d-flex align-items-center">
@@ -125,7 +125,7 @@
                 <img width="293" src="./images/jacket-4.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
-                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <h4 class="card-title">Snowboard Jacket Mens</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="row d-flex align-items-center">
@@ -144,7 +144,7 @@
                 <img width="293" src="./images/jacket-5.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
-                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <h4 class="card-title">Man Leather Jackets</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="row d-flex align-items-center">
@@ -163,7 +163,7 @@
                 <img width="293" src="./images/jacket-6.png" class="card-img-top p-5" alt="...">
               </div>
               <div class="card-body">
-                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <h4 class="card-title">Man Casual Jackets</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="row d-flex align-items-center">
