project photos updated

--- a/index.html
+++ b/index.html
@@ -56,127 +56,114 @@
     </section>
                               <!-- Brand Section -->
     <main class="container">
-      
         <h3 style="color: #363958; font-size: 48px;">WOMAN JACKET</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col">
-            <div class="shadow p-3 rounded">
-              <div style="background-color: #F1F1F1;">
-                <img width="293" src="./images/jacket-1.png" class="card-img-top p-5" alt="...">
-              </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <img src="./images/jacket-1.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
                 <h4 class="card-title">Yellow Coat Jacket</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between">
+                  <div class="p-2">
+                    <h4>$500</h4>
+                  </div>
+                  <div class="p-2">
+                    <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
+                  </div>
+                </div>
               </div>
-              <div class="row d-flex align-items-center">
-                <div class="col-lg-6">
-                    <h2 style="color: #FABE4C;" class="mx-3">$234</h2>
-                </div>
-                <div class="col-lg-6">
-                  <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
-                </div>
-            </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="shadow p-3 rounded">
-              <div style="background-color: #F1F1F1;">
-                <img width="293" src="./images/jacket-2.png" class="card-img-top p-5" alt="...">
-              </div>
-              <div class="card-body">
-                <h4 class="card-title">Ladies Jacket</h4>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="row d-flex align-items-center">
-                <div class="col-lg-6">
-                    <h2 style="color: #FABE4C;" class="mx-3">$234</h2>
-                </div>
-                <div class="col-lg-6">
-                  <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
-                </div>
-            </div>
             </div>
           </div>
-          <div class="col">
-            <div class="shadow p-3 rounded">
-              <div style="background-color: #F1F1F1;">
-                <img width="293" src="./images/jacket-3.png" class="card-img-top p-5" alt="...">
-              </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <img src="./images/jacket-2.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
-                <h4 class="card-title">Woman Leather Jacket</h4>
+                <h4 class="card-title">Yellow Coat Jacket</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between">
+                  <div class="p-2">
+                    <h4>$500</h4>
+                  </div>
+                  <div class="p-2">
+                    <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
+                  </div>
+                </div>
               </div>
-              <div class="row d-flex align-items-center">
-                <div class="col-lg-6">
-                    <h2 style="color: #FABE4C;" class="mx-3">$234</h2>
-                </div>
-                <div class="col-lg-6">
-                  <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
-                </div>
             </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <img src="./images/jacket-3.png" class="card-img-top p-5" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between">
+                  <div class="p-2">
+                    <h4>$500</h4>
+                  </div>
+                  <div class="p-2">
+                    <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <h3 class="mt-5" style="color: #363958; font-size: 48px;">MEN JACKET</h3>
+        <h3 class="mt-5" style="color: #363958; font-size: 48px;">MAN JACKET</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col">
-            <div class="shadow p-3 rounded">
-              <div style="background-color: #F1F1F1;">
-                <img width="293" src="./images/jacket-4.png" class="card-img-top p-5" alt="...">
-              </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <img src="./images/jacket-4.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
-                <h4 class="card-title">Snowboard Jacket Mens</h4>
+                <h4 class="card-title">Yellow Coat Jacket</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between">
+                  <div class="p-2">
+                    <h4>$500</h4>
+                  </div>
+                  <div class="p-2">
+                    <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
+                  </div>
+                </div>
               </div>
-              <div class="row d-flex align-items-center">
-                <div class="col-lg-6">
-                    <h2 style="color: #FABE4C;" class="mx-3">$234</h2>
-                </div>
-                <div class="col-lg-6">
-                  <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
-                </div>
-            </div>
             </div>
           </div>
-          <div class="col">
-            <div class="shadow p-3 rounded">
-              <div style="background-color: #F1F1F1;">
-                <img width="293" src="./images/jacket-5.png" class="card-img-top p-5" alt="...">
-              </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <img src="./images/jacket-5.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
-                <h4 class="card-title">Man Leather Jackets</h4>
+                <h4 class="card-title">Yellow Coat Jacket</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between">
+                  <div class="p-2">
+                    <h4>$500</h4>
+                  </div>
+                  <div class="p-2">
+                    <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
+                  </div>
+                </div>
               </div>
-              <div class="row d-flex align-items-center">
-                <div class="col-lg-6">
-                    <h2 style="color: #FABE4C;" class="mx-3">$234</h2>
-                </div>
-                <div class="col-lg-6">
-                  <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
-                </div>
-            </div>
             </div>
           </div>
-          <div class="col">
-            <div class="shadow p-3 rounded">
-              <div style="background-color: #F1F1F1;">
-                <img width="293" src="./images/jacket-6.png" class="card-img-top p-5" alt="...">
-              </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <img src="./images/jacket-6.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
-                <h4 class="card-title">Man Casual Jackets</h4>
+                <h4 class="card-title">Yellow Coat Jacket</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between">
+                  <div class="p-2">
+                    <h4>$500</h4>
+                  </div>
+                  <div class="p-2">
+                    <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
+                  </div>
+                </div>
               </div>
-              <div class="row d-flex align-items-center">
-                <div class="col-lg-6">
-                    <h2 style="color: #FABE4C;" class="mx-3">$234</h2>
-                </div>
-                <div class="col-lg-6">
-                  <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
-                </div>
-            </div>
             </div>
           </div>
-        </div>   
+        </div>
     </main>
     <section class="container mt-5">
           <div class="row d-flex align-items-center">
