--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
               <div class="card-body">
                 <h4 class="card-title">Yellow Coat Jacket</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <div class="p-2">
-                    <h4>$500</h4>
+                    <h2 style="color: #FABE4C;">$500</h2>
                   </div>
                   <div class="p-2">
                     <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
@@ -79,11 +79,11 @@
             <div class="card">
               <img src="./images/jacket-2.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
-                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <h4 class="card-title">Ladies Jacket</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <div class="p-2">
-                    <h4>$500</h4>
+                    <h2 style="color: #FABE4C;">$500</h2>
                   </div>
                   <div class="p-2">
                     <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
@@ -96,11 +96,11 @@
             <div class="card">
               <img src="./images/jacket-3.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
-                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <h4 class="card-title">Woman Leather Jacket</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <div class="p-2">
-                    <h4>$500</h4>
+                    <h2 style="color: #FABE4C;">$500</h2>
                   </div>
                   <div class="p-2">
                     <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
@@ -116,11 +116,11 @@
             <div class="card">
               <img src="./images/jacket-4.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
-                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <h4 class="card-title">Snowboard Jacket Mens</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <div class="p-2">
-                    <h4>$500</h4>
+                    <h2 style="color: #FABE4C;">$500</h2>
                   </div>
                   <div class="p-2">
                     <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
@@ -133,11 +133,11 @@
             <div class="card">
               <img src="./images/jacket-5.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
-                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <h4 class="card-title">Man Leather Jackets</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <div class="p-2">
-                    <h4>$500</h4>
+                    <h2 style="color: #FABE4C;">$500</h2>
                   </div>
                   <div class="p-2">
                     <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
@@ -150,11 +150,11 @@
             <div class="card">
               <img src="./images/jacket-6.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
-                <h4 class="card-title">Yellow Coat Jacket</h4>
+                <h4 class="card-title">Man Casual Jackets</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <div class="p-2">
-                    <h4>$500</h4>
+                    <h2 style="color: #FABE4C;">$500</h2>
                   </div>
                   <div class="p-2">
                     <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
