--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             </div>
           </nav>
           <div class="row d-flex align-items-center">
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-sm-12">
                   <h1 style="color: #FABE4C; font-size: 80px;">Be the Penguins</h1>
                   <h1 style="color: #363958; font-size: 80px;">of Winter</h1>
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium alias laudantium nostrum eveniet architecto tempore voluptatibus accusamus modi unde impedit?</p>
                   <br>
                   <a class="px-4 py-3 text-white rounded" style="background-color: #A4BC46; text-decoration: none;" href=""><i class="fas fa-shopping-cart"></i> Buy Now </a>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-sm-12">
                   <img class="img-fluid" src="./images/model.png" alt="">
               </div>
              
