--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main class="container">
         <h3 style="color: #363958; font-size: 48px;">WOMAN JACKET</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6">
             <div class="card">
               <img src="./images/jacket-1.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
@@ -75,7 +75,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6">
             <div class="card">
               <img src="./images/jacket-2.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
@@ -92,7 +92,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6">
             <div class="card">
               <img src="./images/jacket-3.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
@@ -112,7 +112,7 @@
         </div>
         <h3 class="mt-5" style="color: #363958; font-size: 48px;">MAN JACKET</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6">
             <div class="card">
               <img src="./images/jacket-4.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
@@ -129,7 +129,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6">
             <div class="card">
               <img src="./images/jacket-5.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
@@ -146,7 +146,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6">
             <div class="card">
               <img src="./images/jacket-6.png" class="card-img-top p-5" alt="...">
               <div class="card-body">
@@ -200,7 +200,7 @@
             </div>
             </div>
             <div class="col-lg-6 col-sm-12 text-center">
-                <img class="img-fluid" src="./images/shopping.png" alt="">
+                <img class="img-fluid p-5" src="./images/shopping.png" alt="">
             </div>
          </div>
         
